<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="16dp">

  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/settings"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_gravity="center_horizontal"/>

  <com.google.android.material.materialswitch.MaterialSwitch
    android:id="@+id/theme_switch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/theme_mode" />


  <com.google.android.material.materialswitch.MaterialSwitch
    android:id="@+id/notification_switch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/daily_reminder" />

</LinearLayout>
