<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.detail.DetailActivity"
  >
  <com.airbnb.lottie.LottieAnimationView
    android:id="@+id/loading"
    android:layout_width="250dp"
    android:layout_height="250dp"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    android:elevation="2dp"
    app:lottie_rawRes="@raw/loading_primary"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@+id/registerButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

      <androidx.cardview.widget.CardView
          android:id="@+id/card_image"
          android:layout_width="match_parent"
          android:layout_height="275dp"
          app:cardCornerRadius="32dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_image"
            android:foreground="@drawable/gradient_background"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.cardview.widget.CardView>

      <TextView
          android:id="@+id/detail_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/title"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="@id/card_image"
          app:layout_constraintStart_toStartOf="@id/card_image"
          app:layout_constraintTop_toBottomOf="@id/card_image" />

      <TextView
          android:id="@+id/detail_owner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/event_owner"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="@id/detail_title"
          app:layout_constraintStart_toStartOf="@id/detail_title"
          app:layout_constraintTop_toBottomOf="@id/detail_title" />

      <LinearLayout
          android:id="@+id/three_spec"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="28dp"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="@id/detail_owner"
          app:layout_constraintStart_toStartOf="@id/detail_owner"
          app:layout_constraintTop_toBottomOf="@id/detail_owner">

        <TextView
            android:id="@+id/detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/city_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/detail_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quota"
            android:textSize="12sp" />
      </LinearLayout>

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tabs"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="16dp"
          android:contentDescription="@string/spacer"
          app:layout_constraintTop_toBottomOf="@+id/three_spec" />

      <TextView
          android:id="@+id/time_begin_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="24dp"
          android:text="@string/event_start"
          android:textSize="12sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tabs" />

      <TextView
          android:id="@+id/detail_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:text="@string/date_and_time"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/time_begin_title" />

      <TextView
          android:id="@+id/event_desc_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="24dp"
          android:text="@string/event_description"
          android:textSize="12sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/detail_time" />

      <TextView
          android:id="@+id/detail_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:text="@string/description"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/event_desc_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

  <Button
    android:id="@+id/registerButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    style="@style/Widget.Material3.Button.IconButton.Filled"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/favouriteButton"
    app:layout_constraintStart_toStartOf="parent"
    />

  <Button
    android:id="@+id/favouriteButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    style="?attr/materialIconButtonFilledTonalStyle"
    app:icon="@drawable/baseline_favorite_border_24"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/registerButton"
    />
</androidx.constraintlayout.widget.ConstraintLayout>