<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="8dp"
  app:cardCornerRadius="8dp"
  >
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >
    <androidx.cardview.widget.CardView
      android:id="@+id/card_image"
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:cardCornerRadius="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <ImageView
        android:id="@+id/item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_image"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>
    <TextView
      android:id="@+id/item_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/title"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/item_category"
      app:layout_constraintStart_toEndOf="@+id/card_image"
      app:layout_constraintTop_toTopOf="@+id/card_image"
      />
    <TextView
      android:id="@+id/item_category"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      android:paddingTop="4dp"
      android:paddingBottom="4dp"
      android:text="@string/category"
      android:textSize="12sp"
      android:textAlignment="center"
      android:background="@drawable/rounded_corner_background"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/card_image"
      />
    <TextView
      android:id="@+id/item_summary"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/summary"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="@+id/item_title"
      app:layout_constraintStart_toStartOf="@+id/item_title"
      app:layout_constraintTop_toBottomOf="@+id/item_title"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>