<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.fragment.home.HomeFragment">
  <com.google.android.material.search.SearchBar
    android:id="@+id/search_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:hint="@string/search_events"
    />
  <com.google.android.material.search.SearchView
    android:id="@+id/search_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:hint="@string/search_events"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
  </com.google.android.material.search.SearchView>
  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/search_bar"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      >
      <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/loading_primary"
        android:elevation="2dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
      <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dicoding_event"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
      <TextView
        android:id="@+id/upcoming_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_events"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        />
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upcoming_title"
        android:layout_marginTop="8dp"
        />
      <TextView
        android:id="@+id/finished_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_events"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/upcoming_rv"
        app:layout_constraintStart_toStartOf="@id/upcoming_rv"
        />
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finished_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toBottomOf="@id/finished_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
